@@ -1,24 +1,33 @@
 package com.example.PetHome.config;
 
+import com.example.PetHome.entity.User;
+import com.example.PetHome.service.UserService;
+import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.http.HttpMethod;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.authentication.AuthenticationProvider;
+import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
+import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
-
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+
 import java.util.Arrays;
+import java.util.List;
+
 import static org.springframework.security.config.Customizer.withDefaults;
 
 @Configuration
@@ -42,39 +51,51 @@ public class SecurityConfig {
                 .csrf(AbstractHttpConfigurer::disable)
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(authorize -> authorize
+                        // 放行登录和注册
                         .requestMatchers("/api/user/register", "/api/user/login").permitAll()
-                        .requestMatchers(HttpMethod.GET, "/api/pets", "/api/pets/**").permitAll()
 
+                        // 放行公开的 GET 请求 (宠物列表、帖子列表、轮播图)
+                        .requestMatchers(HttpMethod.GET, "/api/pets", "/api/pets/**", "/api/carousels", "/api/posts", "/api/posts/**").permitAll()
+
+                        // 【【【 关键修复：放行静态资源目录 /uploads/** 】】】
+                        .requestMatchers("/uploads/**").permitAll()
+
+                        // 用户相关接口
                         .requestMatchers(HttpMethod.PUT, "/api/user/profile").authenticated()
                         .requestMatchers(HttpMethod.PUT, "/api/user/password").authenticated()
 
-                        // 帖子功能的安全规则
-                        .requestMatchers(HttpMethod.GET, "/api/posts", "/api/posts/**").permitAll() // 公开查看帖子
-                        .requestMatchers(HttpMethod.POST, "/api/posts").authenticated() // 登录后发帖
-                        .requestMatchers(HttpMethod.DELETE, "/api/posts/**").authenticated() // 登录后删帖(Service会验证权限)
-
+                        // 帖子操作 (发帖、删除)
+                        .requestMatchers(HttpMethod.POST, "/api/posts").authenticated()
+                        .requestMatchers(HttpMethod.DELETE, "/api/posts/**").authenticated()
                         .requestMatchers(HttpMethod.GET, "/api/posts/my").authenticated()
+                        .requestMatchers(HttpMethod.PUT, "/api/posts/*/audit").hasAuthority("ROLE_ADMIN")
 
-                        // 【【【 新增：评论功能 】】】
+                        // 评论功能
                         .requestMatchers(HttpMethod.GET, "/api/comments/pet/**").authenticated()
                         .requestMatchers(HttpMethod.POST, "/api/comments").authenticated()
                         .requestMatchers(HttpMethod.GET, "/api/comments/all").hasAuthority("ROLE_ADMIN")
                         .requestMatchers(HttpMethod.DELETE, "/api/comments/**").authenticated()
 
-                        // 【【【 新增：点赞/浏览功能 】】】
+                        // 点赞/浏览功能
                         .requestMatchers(HttpMethod.POST, "/api/posts/*/like").authenticated()
                         .requestMatchers(HttpMethod.POST, "/api/posts/*/view").authenticated()
                         .requestMatchers(HttpMethod.GET, "/api/posts/my/likes").authenticated()
 
-                        // 【【【 在这里修复了路径 】】】
-                        .requestMatchers(HttpMethod.PUT, "/api/posts/*/audit").hasAuthority("ROLE_ADMIN") // 仅管理员审核 (使用 * 替代 **)
-
                         // (管理员) 申请和用户列表
                         .requestMatchers(HttpMethod.GET, "/api/applications").hasAuthority("ROLE_ADMIN")
                         .requestMatchers(HttpMethod.GET, "/api/user/all").hasAuthority("ROLE_ADMIN")
+                        .requestMatchers(HttpMethod.PUT, "/api/user/admin/update").hasAuthority("ROLE_ADMIN")
+                        .requestMatchers(HttpMethod.DELETE, "/api/user/*").hasAuthority("ROLE_ADMIN")
 
-                        .requestMatchers(HttpMethod.GET, "/api/pets", "/api/pets/**", "/api/carousels").permitAll() // 允许公开访问上传的文件
+                        // 其他所有请求都需要认证
                         .anyRequest().authenticated()
+                )
+                // 异常处理：当未登录访问受保护资源时，返回 401 而不是重定向
+                .exceptionHandling(exception -> exception
+                        .authenticationEntryPoint((request, response, authException) -> {
+                            response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+                            response.getWriter().write("Unauthorized");
+                        })
                 )
                 .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
@@ -84,13 +105,17 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173"));
+        configuration.setAllowedOrigins(List.of("http://localhost:5173")); // 前端地址
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
-
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
+    }
+
+    @Bean
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration authenticationConfiguration) throws Exception {
+        return authenticationConfiguration.getAuthenticationManager();
     }
 }
